SQLiteData metody pre Miesta boli pridane: noveMiestoPrihlasenia, aktualizujMiestoPrihlasenia, miestoPrihlasenia

--- a/Udalosti/Base.lproj/Udalosti.storyboard
+++ b/Udalosti/Base.lproj/Udalosti.storyboard
@@ -42,7 +42,7 @@
                                 </state>
                                 <connections>
                                     <action selector="prvyStart:" destination="sXt-ap-NFK" eventType="touchUpInside" id="xLt-vG-7ZO"/>
-                                    <segue destination="ayh-Cd-cBl" kind="show" id="Bsf-SF-ekB"/>
+                                    <segue destination="ayh-Cd-cBl" kind="show" identifier="Prihlasenie" id="Bsf-SF-ekB"/>
                                 </connections>
                             </button>
                         </subviews>
