--- a/Udalosti/Base.lproj/Udalosti.storyboard
+++ b/Udalosti/Base.lproj/Udalosti.storyboard
@@ -42,7 +42,7 @@
                                 </state>
                                 <connections>
                                     <action selector="prvyStart:" destination="sXt-ap-NFK" eventType="touchUpInside" id="xLt-vG-7ZO"/>
-                                    <segue destination="ayh-Cd-cBl" kind="show" identifier="Prihlasenie" id="Bsf-SF-ekB"/>
+                                    <segue destination="ayh-Cd-cBl" kind="show" identifier="prvyStart" id="Bsf-SF-ekB"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -64,6 +64,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jZV-Wk-yZb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1512.8" y="25.637181409295355"/>
+        </scene>
+        <!--Uvodna Obrazokvka-->
+        <scene sceneID="8yE-vF-aHc">
+            <objects>
+                <viewController storyboardIdentifier="UvodnaObrazokvka" id="5V0-Fd-hoB" customClass="UvodnaObrazokvka" customModule="Udalosti" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oC8-pl-UjM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="udalosti_logo" translatesAutoresizingMaskIntoConstraints="NO" id="Fpr-KI-wh4">
+                                <rect key="frame" x="131" y="258" width="113" height="150"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="white" translatesAutoresizingMaskIntoConstraints="NO" id="SmQ-fu-GqE">
+                                <rect key="frame" x="177" y="570" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.16862745098039217" green="0.38823529411764707" blue="0.55686274509803924" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="wLK-Ot-AL8"/>
+                    </view>
+                    <connections>
+                        <outlet property="nacitavanie" destination="SmQ-fu-GqE" id="GLy-bR-loN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Gib-Q5-8cT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1513" y="733"/>
         </scene>
         <!--Autentifikacia-->
         <scene sceneID="1sB-ya-J1W">
@@ -199,6 +227,21 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3pj-Fk-Qc9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="0.80000000000000004" y="24.7376311844078"/>
+        </scene>
+        <!--Zoznam Udalosti-->
+        <scene sceneID="pzE-ji-yMS">
+            <objects>
+                <viewController storyboardIdentifier="ZoznamUdalosti" id="Crb-Dh-2CE" customClass="ZoznamUdalosti" customModule="Udalosti" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KbC-Wk-8DW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="B2E-1g-ZaP"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RbX-tX-T9f" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="762" y="25"/>
         </scene>
         <!--Registracia-->
         <scene sceneID="KJI-8g-2VV">
