Token generator a odhlasenie

--- a/Udalosti/Base.lproj/Udalosti.storyboard
+++ b/Udalosti/Base.lproj/Udalosti.storyboard
@@ -365,7 +365,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="ci4-rG-LME"/>
-        <segue reference="kzr-RI-kS7"/>
+        <segue reference="Bsf-SF-ekB"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
