--- a/Udalosti/Base.lproj/LaunchScreen.storyboard
+++ b/Udalosti/Base.lproj/LaunchScreen.storyboard
@@ -35,4 +35,5 @@
     <resources>
         <image name="udalosti_logo" width="166" height="222"/>
     </resources>
+    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
